Changelog
=========


2.1.1 (unreleased)
------------------

- Append changelog to long_description [Nachtalb]


2.1.0 (2019-08-20)
------------------

- Allow to use sources also not in async mode. [njohner]
- Allow adding new terms in async mode. [njohner]
- Fix an error where it was no longer possible to add tags after another async widget have been used. [elioschmutz]


2.0.0 (2019-04-18)
------------------

- Add support for Plone 5.1.x. [mbaechtold]
- Fit newer version of select2 into keywordwidget resources to prevent conflict
  with an older vers. of select2 required by plone. [mathias.leimgruber, busykoala]


1.5.2 (2018-09-21)
------------------

- Fix french translations. [phgross]

1.5.1 (2018-08-27)
------------------

- Remove improper parent of parent validations from ChoicePlus.
  [Rotonen]


1.5.0 (2017-12-14)
------------------

- BREAKING CHANGE: Disallow setting a custom permission at widget init time.
  [Rotonen]

- Move the accidentally-persisting permission check from the field to the
  widget and cache the result in the request.
  [Rotonen]


1.4.2 (2017-11-23)
------------------

- Fix an issue where the term-lookup will fail after the form-validation.
  https://github.com/4teamwork/ftw.keywordwidget/issues/27
  [elioschmutz]


1.4.1 (2017-11-15)
------------------

- Add event after initializing a widget.
  [elioschmutz]

1.4.0 (2017-11-14)
------------------

- Add possiblity to add templates for the select2 widget.
  [elioschmutz]


1.3.6 (2017-08-31)
------------------

- Only add terms to the new field list if it's really a new selected term.
  [mathias.leimgruber]


1.3.5 (2017-08-31)
------------------

- Fix a bug, which I introduced in 1.3.3 and miss to catch in 1.3.4 :-( [mathias.leimgruber]


1.3.4 (2017-08-30)
------------------

- Automatically open the search menu for single value fields. [mathias.leimgruber]

- BugFix: Fix JS error on single value fields. [mathias.leimgruber]


1.3.3 (2017-07-31)
------------------
